[package]
name = "wasm_component_layer"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_component_layer"
readme = "README.md"
description = """
WebAssembly component model implementation for any backend.
"""

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
bytemuck = { version = "1.16.3", default-features = false, features = [ "extern_crate_alloc" ] }
fxhash = "0.2.1"
id-arena = { version = "2.2.1", default-features = false }
ref-cast = { version = "1.0.23", default-features = false }
semver = { version = "1.0.23", default-features = false }
serde = { version = "1.0.204", optional = true, default-features = false, features = [ "derive", "rc" ] }
slab = { version = "0.4.9", default-features = false }
wasm_runtime_layer = { version = "0.6.0", default-features = false }
wasmtime-environ = { version = "18.0.1", features = [ "component-model" ] }
wit-component = { version = "0.19.0", default-features = false }
wit-parser = { version = "0.13.0", default-features = false }

[patch.crates-io]
wasm_runtime_layer = { git = "https://github.com/DouglasDwyer/wasm_runtime_layer", rev = "efbea9e92e82d6fd3e97af9386e5f7517c64db12" }

[features]
serde = [ "dep:serde", "semver/serde" ]

[dev-dependencies]
wasmi = "0.48.0"
wasmi_runtime_layer = "0.48.0"